@@ -27,6 +27,8 @@ Version 1.5.7+svn:
     * Fixed several glitches in with the listboxes and new portrait dialog.
     * Pressing escape in a new dialog, behaves like in the old dialogs again.
     * Spacebar closes the dialogs without a scrollbar again.
+    * The new portrait dialogs can now show the old images as well and also the
+      right hand side images.
     
   * Multiplayer user interface
     * Added a gui front-end to various commands, brought up by double clicking
